Updates to makefiles

--- a/common/glide.yaml
+++ b/common/glide.yaml
@@ -1,4 +1,4 @@
-package: common
+package: github.com/ello/ello-go/common
 import:
 - package: github.com/julienschmidt/httprouter
 - package: github.com/unrolled/render
