simplifying make output

--- a/Makefile.variable
+++ b/Makefile.variable
@@ -5,7 +5,6 @@ WARN_COLOR=\033[33;01m
 TOPIC_COLOR=\033[36;01m
 
 OK_STRING=$(OK_COLOR)[OK]$(NO_COLOR)
-CHECK_STRING=$(OK_COLOR)√$(NO_COLOR)
 ERROR_STRING=$(ERROR_COLOR)[ERRORS]$(NO_COLOR)
 WARN_STRING=$(WARN_COLOR)[WARNINGS]$(NO_COLOR)
 LINE_STRING=$(TOPIC_COLOR)~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$(NO_COLOR)
@@ -13,8 +12,7 @@ LINE_STRING=$(TOPIC_COLOR)~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$(NO_COLOR
 AWK_CMD = awk '{ printf "%-30s %-10s\n",$$1, $$2; }'
 PRINT_ERROR = printf "$@ $(ERROR_STRING)\n" | $(AWK_CMD) && printf "$(CMD)\n$$LOG\n" && false
 PRINT_WARNING = printf "$@ $(WARN_STRING)\n" | $(AWK_CMD) && printf "$(CMD)\n$$LOG\n"
-PRINT_OK = printf "$@ $(OK_STRING)\n" | $(AWK_CMD)
-PRINT_CHECK = printf "$(CHECK_STRING)\n"
+PRINT_OK = printf "$(TOPIC_COLOR)$@$(NO_COLOR) $(OK_STRING)\n" | $(AWK_CMD)
 PRINT_LINE = printf "$(LINE_STRING)\n"
 DOT = printf "."
 
