Moved some things around and got basic rest endpoints stood up

--- a/streams/glide.yaml
+++ b/streams/glide.yaml
@@ -6,14 +6,5 @@ package: github.com/ello/ello-go/streams
 
 # Declare your project's dependencies.
 import:
-  # Fetch package similar to 'go get':
-  #- package: github.com/Masterminds/cookoo
-  # Get and manage a package with Git:
-  #- package: github.com/Masterminds/cookoo
-  #  # The repository URL
-  #  repo: git@github.com:Masterminds/cookoo.git
-  #  # A tag, branch, or SHA
-  #  ref: 1.1.0
-  #  # the VCS type (compare to bzr, hg, svn). You should
-  #  # set this if you know it.
-  #  vcs: git
+- package: github.com/julienschmidt/httprouter
+- package: github.com/unrolled/render
