--- a/common/Makefile
+++ b/common/Makefile
@@ -34,7 +34,7 @@ fmt:
 test:export GO15VENDOREXPERIMENT=1
 test:export LOGXI=dat:sqlx=off
 test: fmt vet lint
-	@go test `glide novendor` -v -cover 
+	@go test `glide novendor` -cover 
 	@$(PRINT_OK)
 
 test-w:
