--- a/streams/Makefile
+++ b/streams/Makefile
@@ -33,9 +33,10 @@ lint:
 	@gometalinter --vendor  --deadline=10s --disable=gotype --disable=aligncheck --disable=structcheck --dupl-threshold=70 `glide novendor`
 	@$(PRINT_OK)
 
+# TODO Consider switching to gofmt -s -w with xargs
 fmt:export GO15VENDOREXPERIMENT=1
 fmt:
-	@go fmt `glide novendor`
+	@go fmt `glide nv`
 	@$(PRINT_OK)
 
 install:export GO15VENDOREXPERIMENT=1
