roshi marshaling done

--- a/streams/Makefile
+++ b/streams/Makefile
@@ -58,7 +58,7 @@ docker:
 test:export GO15VENDOREXPERIMENT=1
 test:export LOGXI=dat:sqlx=off
 test: fmt vet lint
-	@go test `glide novendor` -v -cover
+	@go test `glide novendor` -cover
 	@$(PRINT_OK)
 
 test-w:
