--- a/streams/glide.yaml
+++ b/streams/glide.yaml
@@ -10,3 +10,5 @@ import:
 - package: gopkg.in/gemnasium/logrus-airbrake-hook.v2
 - package: github.com/m4rw3r/uuid
 - package: github.com/unrolled/render
+- package: github.com/codegangsta/negroni
+- package: github.com/meatballhat/negroni-logrus
