--- a/streams/glide.yaml
+++ b/streams/glide.yaml
@@ -12,3 +12,4 @@ import:
 - package: github.com/unrolled/render
 - package: github.com/codegangsta/negroni
 - package: github.com/meatballhat/negroni-logrus
+- package: github.com/rcrowley/go-metrics
