--- a/streams/Dockerfile
+++ b/streams/Dockerfile
@@ -1,9 +1,13 @@
 FROM golang
 EXPOSE 8080
-ADD . /go/src/github.com/ello/ello-go/streams/
+
+COPY ./glide.yaml /go/src/github.com/ello/ello-go/streams/glide.yaml
 RUN go get github.com/Masterminds/glide
 RUN go build github.com/Masterminds/glide
 WORKDIR /go/src/github.com/ello/ello-go/streams/
 RUN GO15VENDOREXPERIMENT=1 glide install
+
+COPY . /go/src/github.com/ello/ello-go/streams/
 RUN GO15VENDOREXPERIMENT=1 go build
+
 ENTRYPOINT ["./streams"]
