--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_install:
 install:
   - make setup-ci
 
-script: ELLO_ROSHI_HOST="http://$(docker-machine ip default):6302" make test
+script: make test
