--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
   - docker
 
 before_install:
-  - docker-compose -f ./streams/docker-compose.yml start roshi
+  - docker-compose -f ./streams/docker-compose.yml up roshi
 
 install:
   - make setup-ci
