--- a/streams/Makefile
+++ b/streams/Makefile
@@ -23,7 +23,7 @@ vet:
 # TODO Re-enable these linters once vendor support is better (potentially 1.6)
 lint:export GO15VENDOREXPERIMENT=1
 lint:
-	@gometalinter --vendor  --deadline=10s --disable=gotype --disable=aligncheck --disable=structcheck --dupl-threshold=70 `glide novendor`
+	@gometalinter --vendor  --deadline=5s --disable=gotype --disable=aligncheck --disable=structcheck --dupl-threshold=70 `glide novendor`
 	@$(PRINT_OK)
 
 fmt:export GO15VENDOREXPERIMENT=1
@@ -51,7 +51,7 @@ docker: test
 test:export GO15VENDOREXPERIMENT=1
 test:export LOGXI=dat:sqlx=off
 test: fmt vet lint
-	@go test `glide novendor`
+	@go test `glide novendor` -cover
 	@$(PRINT_OK)
 
 test-w:
