--- a/streams/glide.yaml
+++ b/streams/glide.yaml
@@ -13,3 +13,6 @@ import:
 - package: github.com/codegangsta/negroni
 - package: github.com/meatballhat/negroni-logrus
 - package: github.com/rcrowley/go-metrics
+- package: github.com/OneOfOne/xxhash
+  subpackages:
+  - /native
