Work around temporary gometalinter breakage

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,15 @@ go:
 - 1.5.1
 services:
 - docker
+env:
+  global:
+    - GO15VENDOREXPERIMENT=1
 before_install:
 - docker-compose -f ./streams/docker-compose.yml up -d roshi
 install:
 - make setup-ci
-script: make test
+script:
+  - make test
 notifications:
   slack:
     rooms:
